# django-reversion-rest-framework

./: .flake8  .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql-analysis.yml  python-package.yml
src/reversion_rest_framework/: mixins.py  serializers.py  viewsets.py
tests/test_app/: models.py  pagination.py  serializers.py  urls.py  views.py
tests/test_app/migrations/: 0001_initial.py  0002_testparentmodel.py  0003_testlimitedmodel.py  0004_testuniquemodel.py  0005_testuniquetogethermodel.py
tests/test_app/tests/: test_api.py  test_mixins.py
tests/test_project/: asgi.py  settings.py  urls.py  wsgi.py
