[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-reversion-rest-framework"
version = "4.1.0"
authors = [{name = "Denny Biasiolli", email = "denny.biasiolli@gmail.com"}]
description = "A package for adding a django-reversion history endpoint to django-rest-framework ModelViewSet"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
]
requires-python = ">=3.10"
dependencies = [
    "django-reversion>=4",
    "djangorestframework>=3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/dennybiasiolli/django-reversion-rest-framework"
"Bug Tracker" = "https://github.com/dennybiasiolli/django-reversion-rest-framework/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.isort]
profile = 'black'

[tool.black]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "coverage>=7.11.0",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pylint>=4.0.6",
    "pylint-django>=2.7.0",
]
