[metadata]
name = django-reversion-rest-framework
version = 1.1.1
author = Denny Biasiolli
author_email = denny.biasiolli@gmail.com
description = A package for adding a django-reversion history endpoint to django-rest-framework ModelViewSet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dennybiasiolli/django-reversion-rest-framework
project_urls =
    Bug Tracker = https://github.com/dennybiasiolli/django-reversion-rest-framework/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    django-reversion>=4
    djangorestframework>=3

[options.packages.find]
where = src
